<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Leave_Unused_Publishment</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">登陆</string>
    <string name="register">注册账号</string>
    <string name="forget">忘记密码</string>
    <string name="register_page">注册</string>
    <string name="sendveryfy">发送验证码</string>
    <string name="messagecode">短信验证码</string>
    <string name="next">下一步</string>
    <string name="setpwd">设置登录密码</string>
    <string name="showpwd">显示</string>
    <string name="register_btn">注册</string>
    <string name="agreeservice">注册表示同意服务条款</string>
    <string name="zone">区域</string>
    <string name="group">分类</string>
    <string name="sort">排序</string>
    <string name="select">筛选</string>
    <string name="productdescription">九成新 从美国专柜购回，颜色粉嫩，细节和手感都不错。买回来后发现码数太小，现低于市场价转出</string>
    <string name="sun_yet_sum">中山大学</string>
    <string name="allcomment">查看所有评论</string>
    <string name="num">num</string>
    <string name="selled">已卖出</string>
    <string name="comment">评论</string>
    <string name="private_chat">私聊</string>
    <string name="response">回复</string>
    <string name="cancel">取消</string>
    <string name="thing">物品</string>
    <string name="people">人</string>
    <string name="me">我</string>
    <string name="publishexchange">发布转让</string>
    <string name="publish">发布</string>
    <string name="acharge">可议价</string>
    <string name="allnew">全新</string>
    <string name="price">价格</string>
    <string name="type">分类</string>
    <string name="message">消息</string>
    <string name="Yes">确定</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
</resources>
