<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <TextView 
        android:id="@+id/settingpwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setpwd"
        android:textColor="@color/login_color"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/pwd"
         android:background="@null"
        android:layout_width="match_parent"
        android:layout_below="@id/settingpwd"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:password="true"
        android:hint="8-20位字母、数字结合"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text=""
        android:textColor="@color/text_content"
        android:textSize="15sp"/>
     <TextView
        android:id="@+id/show"
        android:text="@string/showpwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/showcolor"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/settingpwd"
        android:layout_alignParentRight="true"/>
     <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color"
        android:layout_below="@id/show"
        android:layout_marginTop="10dp"/>
     <Button
         android:id="@+id/register_btn"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_below="@id/show"
         android:layout_marginTop="20dp"
         android:text="@string/register_btn"
         android:textSize="15sp"
         android:textColor="@color/login_btn_content"
         android:background="@drawable/btn_bg"/>
     <TextView
         android:id="@+id/agreeservice"
         android:layout_below="@id/register_btn"
         android:layout_marginTop="10dp"
         android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/agreeservice"
         android:textColor="@color/login_color"
         android:textSize="15sp"/>
         </RelativeLayout>
