<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:background="@color/general" >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
   <RelativeLayout 
       android:id="@+id/publishtitle"
       android:layout_width="match_parent"
       android:layout_height="50dp">
       <TextView
           android:id="@+id/publishcancel"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/cancel"
           android:textColor="@color/text_content"
           android:textSize="15sp"
           android:layout_centerVertical="true"
           android:layout_marginLeft="10dp"/>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerInParent="true"
           android:text="@string/publishexchange"
           android:textSize="20sp"
           android:textColor="@color/text_content"/>
       <TextView
           android:id="@+id/verifypublish"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/publish"
           android:textSize="15sp"
           android:textColor="@color/price_color"
           android:layout_centerVertical="true"
           android:layout_alignParentRight="true"
           android:layout_marginRight="10dp"/>
           
   </RelativeLayout>    
   <View
       android:layout_marginTop="5dp"
       android:layout_width="match_parent"
       android:layout_height="1dp"
       android:background="@color/line_color"/>
    <EditText
        android:id="@+id/edittitle"
        android:layout_width="match_parent"
        android:singleLine="true"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:background="@null"
        android:text=""
        android:hint="标题(不超过10个字)"
        android:textSize="15sp"
        android:textColor="@color/text_content"
        android:layout_marginRight="10dp"/>
    <View
        android:layout_marginTop="3dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
     <EditText
        android:id="@+id/editcontent"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@null"
        android:scrollbars="vertical"
        android:text=""
        android:gravity="top"
        android:textSize="13sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="说点什么?"/>
     <com.example.leave_unused_publishment.widget.MyGridView
        android:id="@+id/gridView1"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_margin="10dp"
		android:background="@color/general"
		android:horizontalSpacing="5dp"
		android:verticalSpacing="5dp"
		android:numColumns="4"
	    android:columnWidth="90dp"
	    android:scrollbars="none"
		android:stretchMode="columnWidth"
	    android:gravity="center" >
	  </com.example.leave_unused_publishment.widget.MyGridView>
	  <RelativeLayout
	      android:layout_width="match_parent"
	      android:layout_height="40dp">
	      <TextView
	          android:id="@+id/achargeprice"
	          android:layout_width="80dp"
	          android:layout_height="30dp"
	          android:layout_centerVertical="true"
	          android:layout_marginLeft="10dp"
	          android:background="@color/price_color"
	          android:text="@string/acharge"
	          android:textSize="12sp"
	          android:textColor="@color/general"/>
	      <TextView
	          android:id="@+id/allnew"
	          android:layout_width="80dp"
	          android:layout_height="30dp"
	          android:layout_centerVertical="true"
	          android:layout_toRightOf="@id/achargeprice"
	          android:layout_marginLeft="10dp"
	          android:text="@string/allnew"
	          android:background="@color/unselect"
	          android:textSize="12sp"
	          android:textColor="@color/general"/>
	  </RelativeLayout>
	  <View
	      android:layout_marginTop="5dp"
	      android:layout_width="match_parent"
	      android:layout_height="15dp"
	      android:background="@color/divider"/>
	  <RelativeLayout
	      android:id="@+id/pricelayout"
	      android:layout_width="match_parent"
	      android:layout_height="40dp">
	      <TextView
	          android:id="@+id/price_texts"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:layout_centerVertical="true"
	          android:layout_marginLeft="10dp"
	          android:text="@string/price"
	          android:textSize="12sp"
	          android:textColor="@color/text_content"/>
	      <ImageView 
	          android:id="@+id/pricearrow"
	          android:layout_width="30dp"
	          android:layout_height="30dp"
	          android:src="@drawable/arrowright"
	          android:layout_centerVertical="true"
	          android:layout_alignParentRight="true"
	          android:layout_marginRight="10dp"/>
          <View
              android:layout_height="1dp"
              android:layout_marginLeft="10dp"
              android:layout_marginRight="10dp"
              android:layout_width="match_parent"
              android:background="@color/divider"
              android:layout_alignParentBottom="true"/>	      
	  </RelativeLayout>
	    <RelativeLayout
	      android:id="@+id/typelayout"
	      android:layout_width="match_parent"
	      android:layout_height="40dp">
	      <TextView
	          android:id="@+id/type_text"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:layout_centerVertical="true"
	          android:layout_marginLeft="10dp"
	          android:text="@string/type"
	          android:textSize="12sp"
	          android:textColor="@color/text_content"/>
	      <ImageView 
	          android:id="@+id/typearrow"
	          android:layout_width="30dp"
	          android:layout_height="30dp"
	          android:src="@drawable/arrowright"
	          android:layout_centerVertical="true"
	          android:layout_alignParentRight="true"
	          android:layout_marginRight="10dp"/> 
	  </RelativeLayout>
</LinearLayout>
</ScrollView>
