<?xml version="1.0" encoding="utf-8"?>
<com.example.leave_unused_publishment.widget.StickyScrollView
   xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:background="@color/general"
    android:layout_width="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_height="match_parent" >
   
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
   <RelativeLayout
        android:id="@+id/searchzone" 
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/select_text">
      <EditText
        android:id="@+id/search"
        android:background="@drawable/search_btn"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:hint="搜索标题,用户名"
        android:drawableLeft="@drawable/search"
        android:textColor="@color/text_content"
        android:textSize="15sp"
        android:text="" 
        android:layout_centerInParent="true"/>
        
    </RelativeLayout>
   <com.example.leave_unused_publishment.widget.BannerViewPager
        android:id="@+id/picwall"
        android:layout_width="match_parent"
        android:visibility="invisible"
        android:layout_below="@id/searchzone"
        android:layout_height="150dp"
        android:layout_marginTop="1dp" ></com.example.leave_unused_publishment.widget.BannerViewPager>
      <LinearLayout
          android:id="@+id/slayout"
          android:layout_below="@id/picwall"
          android:layout_width="140dp"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="20dp"
          android:layout_height="30dp"
          android:orientation="horizontal">
          <RelativeLayout
              android:id="@+id/thing"
              android:layout_width="70dp"
              android:background="@drawable/stroke_half_corner_left"
              android:layout_height="30dp">
              <TextView
                  android:id="@+id/thingtext"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/thing"
                  android:textSize="12sp"
                  android:textColor="@color/general"
                  android:layout_centerInParent="true"/>
                  
          </RelativeLayout>
          <RelativeLayout 
              android:id="@+id/people"
              android:layout_width="70dp"
              android:layout_height="30dp"
              android:background="@drawable/half_corner_right">
               <TextView
                  android:id="@+id/peopletext"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/people"
                  android:textSize="12sp"
                  android:textColor="@color/select_text"
                  android:layout_centerInParent="true"/>
          </RelativeLayout>
      </LinearLayout>
    <GridView
        android:id="@+id/type"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignLeft="@id/picwall"
        android:layout_below="@+id/slayout"
        android:layout_marginTop="10dp"
        android:horizontalSpacing="2.5dip"
        android:numColumns="4"
        android:scrollbars="none"
        android:verticalSpacing="2.5dip" >
    </GridView>
   <LinearLayout 
       android:id="@+id/conditionlayout"
       android:layout_width="match_parent"
       android:layout_below="@id/type"
       android:layout_marginTop="10dp"
       android:background="#ffffff"
       android:layout_height="50dp"
       android:tag="sticky"
       android:orientation="horizontal">
       <RelativeLayout
           android:id="@+id/zonelayout"
           android:layout_weight="1"
           android:layout_height="50dp"
           android:layout_width="wrap_content">
           <TextView
               android:id="@+id/zone"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/zone"
               android:textSize="15sp"
               android:layout_marginLeft="10dp"
               android:layout_centerVertical="true"
               android:textColor="@color/text_color_second"/>
           <ImageView
               android:id="@+id/arrow_zone"
               android:layout_width="24dp"
               android:layout_height="24dp"
               android:src="@drawable/arrow_down"
               android:layout_centerVertical="true"
               android:layout_alignParentRight="true"
               android:layout_marginRight="10dp"/>
               
       </RelativeLayout>
       <View 
           android:layout_width="1dp"
           android:layout_height="20dp"
           android:background="#d6d6d7"
           android:layout_gravity="center_vertical"/>
        <RelativeLayout
           android:id="@+id/grouplayout"
           android:layout_weight="1"
           android:layout_height="50dp"
           android:layout_width="wrap_content">
           <TextView
               android:id="@+id/group"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/group"
               android:textSize="15sp"
               android:layout_marginLeft="10dp"
               android:layout_centerVertical="true"
               android:textColor="@color/text_color_second"/>
           <ImageView
               android:id="@+id/arrow_group"
               android:layout_width="24dp"
               android:layout_height="24dp"
               android:src="@drawable/arrow_down"
               android:layout_centerVertical="true"
               android:layout_alignParentRight="true"
               android:layout_marginRight="10dp"/>
               
       </RelativeLayout>
        <View 
           android:layout_width="1dp"
           android:layout_height="20dp"
           android:background="#d6d6d7"
           android:layout_gravity="center_vertical"/>
         <RelativeLayout
           android:id="@+id/sortlayout"
           android:layout_weight="1"
           android:layout_height="50dp"
           android:layout_width="wrap_content">
           <TextView
               android:id="@+id/sort"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/sort"
               android:textSize="15sp"
               android:layout_marginLeft="10dp"
               android:layout_centerVertical="true"
               android:textColor="@color/text_color_second"/>
           <ImageView
               android:id="@+id/arrow_sort"
               android:layout_width="24dp"
               android:layout_height="24dp"
               android:layout_centerVertical="true"
               android:src="@drawable/arrow_down"
               android:layout_alignParentRight="true"
               android:layout_marginRight="10dp"/>
               
       </RelativeLayout>
        <View 
           android:layout_width="1dp"
           android:layout_height="20dp"
           android:background="#d6d6d7"
           android:layout_gravity="center_vertical"/>
         <RelativeLayout
           android:id="@+id/selectlayout"
           android:layout_weight="1"
           android:layout_height="50dp"
           android:layout_width="wrap_content">
           <TextView
               android:id="@+id/select"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/select"
               android:textSize="15sp"
               android:layout_marginLeft="10dp"
               android:layout_centerVertical="true"
               android:textColor="@color/text_color_second"/>
           <ImageView
               android:id="@+id/arrow_select"
               android:layout_width="24dp"
               android:layout_height="24dp"
               android:layout_centerVertical="true"
               android:src="@drawable/arrow_down"
               android:layout_alignParentRight="true"
               android:layout_marginRight="10dp"/>
               
       </RelativeLayout>"
   </LinearLayout>
   <ListView
       android:layout_below="@id/conditionlayout"
       android:id="@+id/productlist"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"/>
   </RelativeLayout>
   
</com.example.leave_unused_publishment.widget.StickyScrollView>

