<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/searchlayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/select_text">
        <EditText 
            android:id="@+id/searchedit"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:hint="搜索标题,用户名"
            android:background="@drawable/search_btn"
            android:drawableLeft="@drawable/search"
            android:textColor="@color/text_content"
            android:textSize="15sp"
            android:text="" 
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <LinearLayout 
       android:id="@+id/conditionlayout"
       android:layout_width="match_parent"
       android:layout_below="@id/searchlayout"
       android:layout_marginTop="10dp"
       android:background="#ffffff"
       android:layout_height="50dp"
       android:orientation="horizontal">
       <RelativeLayout
           android:id="@+id/zonelayout"
           android:layout_weight="1"
           android:layout_height="50dp"
           android:layout_width="wrap_content">
           <TextView
               android:id="@+id/zone"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/zone"
               android:textSize="15sp"
               android:layout_marginLeft="10dp"
               android:layout_centerVertical="true"
               android:textColor="@color/text_color_second"/>
           <ImageView
               android:id="@+id/arrow_zone"
               android:layout_width="24dp"
               android:layout_height="24dp"
               android:src="@drawable/arrow_down"
               android:layout_centerVertical="true"
               android:layout_alignParentRight="true"
               android:layout_marginRight="10dp"/>
               
       </RelativeLayout>
       <View 
           android:layout_width="1dp"
           android:layout_height="20dp"
           android:background="#d6d6d7"
           android:layout_gravity="center_vertical"/>
        <RelativeLayout
           android:id="@+id/grouplayout"
           android:layout_weight="1"
           android:layout_height="50dp"
           android:layout_width="wrap_content">
           <TextView
               android:id="@+id/group"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/group"
               android:textSize="15sp"
               android:layout_marginLeft="10dp"
               android:layout_centerVertical="true"
               android:textColor="@color/text_color_second"/>
           <ImageView
               android:id="@+id/arrow_group"
               android:layout_width="24dp"
               android:layout_height="24dp"
               android:src="@drawable/arrow_down"
               android:layout_centerVertical="true"
               android:layout_alignParentRight="true"
               android:layout_marginRight="10dp"/>
               
       </RelativeLayout>
        <View 
           android:layout_width="1dp"
           android:layout_height="20dp"
           android:background="#d6d6d7"
           android:layout_gravity="center_vertical"/>
         <RelativeLayout
           android:id="@+id/sortlayout"
           android:layout_weight="1"
           android:layout_height="50dp"
           android:layout_width="wrap_content">
           <TextView
               android:id="@+id/sort"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/sort"
               android:textSize="15sp"
               android:layout_marginLeft="10dp"
               android:layout_centerVertical="true"
               android:textColor="@color/text_color_second"/>
           <ImageView
               android:id="@+id/arrow_sort"
               android:layout_width="24dp"
               android:layout_height="24dp"
               android:layout_centerVertical="true"
               android:src="@drawable/arrow_down"
               android:layout_alignParentRight="true"
               android:layout_marginRight="10dp"/>
               
       </RelativeLayout>
        <View 
           android:layout_width="1dp"
           android:layout_height="20dp"
           android:background="#d6d6d7"
           android:layout_gravity="center_vertical"/>
         <RelativeLayout
           android:id="@+id/selectlayout"
           android:layout_weight="1"
           android:layout_height="50dp"
           android:layout_width="wrap_content">
           <TextView
               android:id="@+id/select"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/select"
               android:textSize="15sp"
               android:layout_marginLeft="10dp"
               android:layout_centerVertical="true"
               android:textColor="@color/text_color_second"/>
           <ImageView
               android:id="@+id/arrow_select"
               android:layout_width="24dp"
               android:layout_height="24dp"
               android:layout_centerVertical="true"
               android:src="@drawable/arrow_down"
               android:layout_alignParentRight="true"
               android:layout_marginRight="10dp"/>
               
       </RelativeLayout>
   </LinearLayout>   
       <ListView
           android:id="@+id/saleitemlist"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_below="@id/conditionlayout"/>
   </RelativeLayout> 
</ScrollView>
