<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:myview="http://schemas.android.com/apk/res-auto"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:background="#ffffff"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">
     <TextView
        android:id="@+id/register_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/login_color"
        android:text="@string/register_page"
        android:textSize="20sp"/>
     <com.example.leave_unused_publishment.widget.CircleImageView 
        android:id="@+id/uIcon_"
        android:layout_centerHorizontal="true"
        android:layout_width="80dp"
        android:layout_below="@id/register_page"
        android:layout_marginTop="10dp"
        android:layout_height="80dp"
        android:src="@drawable/tab_icons_10"
        myview:civ_border_width="4dp"
        myview:civ_border_color="@color/uIcon_color"
        />
     <RelativeLayout
         android:id="@+id/phonelayout"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_below="@id/uIcon_"
         android:layout_marginTop="10dp">
        <EditText
        android:id="@+id/phone"
        android:background="@null"
        android:layout_width="match_parent"
        android:layout_centerVertical="true"
        android:layout_height="wrap_content"
        android:hint="手机号"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text=""
        android:textColor="@color/text_content"
        android:textSize="15sp"/>
        <Button
            android:id="@+id/sendcode"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_bg"
            android:text="@string/sendveryfy"
            android:textColor="@color/login_color"
            android:textSize="12sp"/>
          <ImageView
          android:id="@+id/close_"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/x_close_24px"
          android:scaleType="centerCrop"
          android:layout_toLeftOf="@id/sendcode"
          android:layout_marginRight="10dp"
          android:layout_centerVertical="true"/>
        <View
           android:layout_width="match_parent"
           android:layout_height="1dp"
           android:layout_alignParentBottom="true"
           android:background="@color/line_color"/>
     </RelativeLayout>
      <EditText
        android:id="@+id/Messagecode"
        android:background="@null"
        android:layout_below="@id/phonelayout"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_centerVertical="true"
        android:layout_height="wrap_content"
        android:hint="短信验证码 "
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text=""
        android:textColor="@color/text_content"
        android:textSize="15sp"/>
      <View
         android:layout_below="@id/Messagecode"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/line_color"/>
    
      <Button
         android:id="@+id/next_btn"
         android:layout_below="@id/Messagecode"
         android:layout_marginTop="30dp"
         android:background="@drawable/btn_bg"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:text="@string/next"
         android:textColor="@color/login_btn_content"
         android:textSize="15sp"/>
         
        
</RelativeLayout>
</ScrollView>
